--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -1,6 +1,6 @@
 <h1>Configuration</h1>
 
-<form id="configuration" method="post" action="ajax/saveConfig">
+<form id="configuration" method="post" action="ajax/setConfig">
 
 <div class="visible" id="loading">
 	<p><i>Loading current configuration, please wait...</i></p>
