--- a/front/www/index.html
+++ b/front/www/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="view.css" media="all">
 </head>
 
+<script>
+	var page_version="32";
+</script>
+
 <body onload="loadPage();">
 
 <div id="content">
@@ -17,10 +21,9 @@
 			<div id="topbar"></div>
 			<div id="toptitle">UberLogger One</div>
 			<div id="topmenubar">
-				<button onclick="gotoPage('overview');">Overview</button>
-				<button onclick="gotoPage('config');">Configuration</button>
-				<button onclick="gotoPage('log');">SD card logging</button>
 				<button onclick="gotoPage('liveview');">View live data</button>
+				<button onclick="gotoPage('log');">Logging</button>
+				<button onclick="gotoPage('config');">Configuration</button>
 			</div>
 		</div>
 		
