Correct post/get endpoints on webpages

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -245,7 +245,7 @@
 	</div>
 
 	<div id="configuration_done">
-		<input id="saveForm" class="button_text" type="button" onClick="configSubmit()" value="Save all settings"/>
+		<input id="saveForm" class="button_text" type="button" onClick="setConfig()" value="Save all settings"/>
 	</div>
 </div>
 
