--- a/front/www/html/liveview.html
+++ b/front/www/html/liveview.html
@@ -1,9 +1,11 @@
 <h1>View live data</h1>
 
-<div id="values">
-  <div id="valuelist"><i>Loading...</i></div>
-</div>  
-
-<div id="plot">
-  <div id="plotly"></div>
+<div class="flexcontainer">
+  <div id="values">
+    <div id="valuelist"><i>Loading...</i></div>
+  </div>  
+  
+  <div id="plot">
+    <div id="plotly"></div>
+  </div>  
 </div>
