--- a/front/www/index.html
+++ b/front/www/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <script>
-	var page_version="35";
+	var page_version="46";
 </script>
 
 <body onload="loadPage();">
@@ -21,6 +21,7 @@
 			<div id="topbar"></div>
 			<div id="toptitle">UberLogger One</div>
 			<div id="topmenubar">
+				<button onclick="gotoPage('home');">Home</button>
 				<button onclick="gotoPage('liveview');">View live data</button>
 				<button onclick="gotoPage('log');">Logging</button>
 				<button onclick="gotoPage('config');">Configuration</button>
