--- a/front/www/html/liveview.html
+++ b/front/www/html/liveview.html
@@ -5,7 +5,7 @@
     <div id="valuelist"><i>Loading...</i></div>
   </div>  
   
-  <div id="plot">
+  <div id="plot" class="greybox">
     <div id="plotly"></div>
   </div>  
 </div>
