First working fw update via web interface.

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -11,7 +11,7 @@
 		<h2 class="first">Firmware</h2>
 		<p>
 			Current firmware version: <span name="FW_VERSION">-</span><br/>
-			<a href="/fwupdate">Update firmware</a>
+			<a href="/fwupdate/">Update firmware</a>
 		</p>
 
 		<h2>Backup or restore configuration</h2>
